test: popup.js send message to content.js

--- a/home.html
+++ b/home.html
@@ -39,12 +39,12 @@
 
 			<!-- main content  -->
 			<main role="main" class="inner cover">
-<h1 class="cover-heading">Hi</h1>
-Remove Fog <input id="remove-fog" type="checkbox" checked data-toggle="toggle" data-onstyle="secondary" data-size="sm"><br/><br/>
-<input type="checkbox" checked data-toggle="toggle" data-onstyle="secondary" data-size="sm"><br/><br/>
-<input type="checkbox" checked data-toggle="toggle" data-onstyle="secondary" data-size="sm"><br/><br/>
-<input type="checkbox" checked data-toggle="toggle" data-onstyle="secondary" data-size="sm"><br/><br/>
 
+				<h1 class="cover-heading">Hi</h1>
+				Remove Fog 
+				<input id="rf-on" type="button" class="btn btn-sm" value="ON"></input> 
+				<input id="rf-off" type="button" class="btn btn-sm btn-dark" value="OFF"></input></br>
+				
 
 			</main>
 
